--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -19,20 +19,32 @@ akka {
 
     metrics.enabled = off
   }
+    
+  sharding {
+    state-store-mode = ddat
+  }
+  
   persistence {
     journal {
-      plugin = "akka.persistence.journal.leveldb-shared"
-      leveldb-shared.store {
-        # DO NOT USE 'native = off' IN PRODUCTION !!!
-        native = off
-        dir = "target/shared-journal"
-      }
+      plugin = "akka.persistence.journal.inmem"
+      # leveldb-shared.store {
+      #   # DO NOT USE 'native = off' IN PRODUCTION !!!
+      #   native = off
+      #   dir = "target/shared-journal"
+      # }
     }
-    snapshot-store {
-      plugin = "akka.persistence.snapshot-store.local"
-      local.dir = "target/snapshots"
-    }
-    snapshot-store.plugin = "akka.persistence.snapshot-store.local"
-    snapshot-store.local.dir = "target/snapshots"
+    # snapshot-store {
+    #   plugin = "akka.persistence.snapshot-store.local"
+    #   local.dir = "target/snapshots"
+    # }
+    # snapshot-store.plugin = "akka.persistence.snapshot-store.local"
+    # snapshot-store.local.dir = "target/snapshots"
   }
+}
+
+server {
+  address = 0.0.0.0
+  host = ${?CHAT_BIND_IP}
+  port = 8080
+  port = ${?CHAT_BIND_PORT}
 }
